# brainbow

./: .gitignore  README.md  pyproject.toml  requirements.txt
brainbow/: __init__.py
brainbow/callbacks/: __init__.py  memory.py
brainbow/datamodules/: __init__.py  base.py  cremi3d.py  fib253d.py  microns.py  neurons.py  snemi3d.py
brainbow/datasets/: __init__.py  cremi3d.py  fib253d.py  lazy.py  microns.py  neurons.py  snemi3d.py
brainbow/inference/: __init__.py  clusterer.py  mutex_watershed.py  sliding_window.py
brainbow/losses/: __init__.py  _common.py  affinity.py  boundary.py  brainbow.py  combined.py  dice_bce_focal.py  geometry.py  instance.py  semantic.py
brainbow/metrics/: __init__.py  instance.py  semantic.py
brainbow/models/: __init__.py  base.py
brainbow/modules/: __init__.py  base.py
brainbow/preprocessors/: __init__.py  base.py  hdf5.py  nfty.py  nrrd.py  tiff.py
brainbow/transforms/: __init__.py  _region_field.py  covariance.py  defect.py  direction.py  (+7 more)
configs/: boundary.yaml  brainbow.yaml  combine.yaml  cosmos3nano3d.yaml  cosmospredict3d.yaml  default.yaml  example_annotated.yaml  snemi3d.yaml
doc/: ARCHITECT.md  CONTRIBUTING.md  DATASETS.md  GOTCHAS.md  INDEX.md  MUTEXWATERSHED.md  ORGANIZATION.md  STRUCTURE.md  WALKTHROUGH.md
scripts/: download_cremi3d.py  download_fib253d.py  download_microns.py  download_zenodo_582636.py  train.py
tests/: __init__.py  _bench_skeleton.py  test_boundary_loss.py  test_brainbow_loss.py  test_cosmos_predict.py  test_datamodules.py  test_datasets.py  test_losses.py  test_patches.py  test_preprocessors.py  test_skeleton_transform.py  test_sliding_window.py  test_tensorboard_heads.py  test_utils.py
(+57 files in other folders)
