[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainbow"
version = "0.1.0"
description = "A modular PyTorch Lightning infrastructure for connectomics research."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "pytorch-lightning>=2.1.0",
    "monai>=1.3.0",
    "einops>=0.7.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "h5py>=3.9.0",
    "tifffile>=2023.7.0",
    "pynrrd>=1.0.0",
    "nibabel>=5.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "wandb>=0.15.0",
    "tensorboard>=2.14.0",
    "rich>=13.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
cosmos = [
    "diffusers>=0.37.0",
    "huggingface_hub>=1.6.0",
    "safetensors>=0.7.0",
    "accelerate>=1.13.0",
]
# NVIDIA RAPIDS wheels for GPU clustering (cuML HDBSCAN) and GPU
# transforms (cupy-backed EDT / gaussian / connected components).
# Must be installed via NVIDIA's index, e.g.:
#   pip install -e ".[gpu-cu13]" --extra-index-url https://pypi.nvidia.com
gpu-cu13 = [
    "cupy-cuda13x>=14.0",
    "cuml-cu13>=25.10",
]
gpu-cu12 = [
    "cupy-cuda12x>=13.0",
    "cuml-cu12>=25.10",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "nbformat>=4.2.0",
    "ipykernel>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["brainbow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
